--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  firebase_core: ^2.27.1
+  cloud_firestore: ^4.15.9
+  firebase_auth: ^4.17.7
+  
+# The following adds the Cupertino Icons font to your application.
+# Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  cloud_firestore: ^4.12.0
+  firebase_analytics: ^10.6.1
+  firebase_core: ^2.19.0
+  firebase_messaging: ^14.7.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
